Implement runtime environment variable solution with API endpoint

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -27,6 +27,8 @@
     <title>DevBizOps</title>
     <!-- Fix for console warnings -->
     <script src="%PUBLIC_URL%/fix-warnings.js"></script>
+    <!-- Runtime environment configuration - using API endpoint -->
+    <script src="/api/env-config.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
