Implement runtime configuration with build-time variable injection

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -27,6 +27,8 @@
     <title>DevBizOps</title>
     <!-- Fix for console warnings -->
     <script src="%PUBLIC_URL%/fix-warnings.js"></script>
+    <!-- Runtime configuration (generated during build) -->
+    <script src="%PUBLIC_URL%/runtime-config.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
