--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -29,6 +29,8 @@
     <script src="%PUBLIC_URL%/fix-warnings.js"></script>
     <!-- Runtime configuration (generated during build) -->
     <script src="%PUBLIC_URL%/runtime-config.js"></script>
+    <!-- Debug values (generated during build) -->
+    <script src="%PUBLIC_URL%/debug-values.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
